Añadida separacion de cambios Q4

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,8 +7,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # CI: Build, Q1, Q2 y Q4
+  # 1. ETAPA DE CONSTRUCCIÓN Y TESTS (CI)
   build-and-test:
+    name: Build & Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout del código
@@ -24,24 +25,44 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Q1 y Q2: Pruebas unitarias e integración (Pytest) 
+      # Q1 y Q2: Pruebas unitarias e integración
       - name: Ejecutar Tests (Q1 y Q2)
         run: pytest
 
-      # Q4: Análisis estático (SAST con Bandit y Linter con Flake8) 
+  # 2. NUEVA ETAPA VISUAL: CALIDAD Y SEGURIDAD (Q4)
+  quality-analysis:
+    name: Q4 - Calidad y Seguridad
+    needs: build-and-test  # Se ejecuta después de que pasen los tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout del código
+        uses: actions/checkout@v4
+
+      - name: Configurar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Instalar herramientas de análisis
+        run: |
+          python -m pip install --upgrade pip
+          pip install bandit flake8
+
+      # Q4: Análisis estático
       - name: Análisis de Seguridad (Bandit)
-        run: bandit -r . -f custom || true
+        run: bandit -r . -f custom || true  # El || true evita que falle el pipeline si encuentra algo leve
 
       - name: Análisis de Calidad (Flake8)
         run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
-  # CD: Despliegue automático 
+  # 3. ETAPA DE DESPLIEGUE (CD)
   deploy:
-    needs: build-and-test
+    name: Deploy to Production
+    needs: quality-analysis # Ahora depende de que pase la calidad, no solo los tests
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Simular Despliegue
         run: |
-          echo "Desplegando automáticamente a producción tras validar CI..."
+          echo "Desplegando automáticamente a producción tras validar CI y Q4..."
           echo "Estado: Verde en producción."
